--- a/tugas.html
+++ b/tugas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventaris Stok - Kuning Hitam Bold</title>
+    <title>Sistem Informasi Stock Barang</title>
     <style>
         :root {
             --dark-bg: #111111; 
@@ -217,4 +217,5 @@
         updateTabel();
     </script>
 </body>
+
 </html>
